Correct contact information, add in new contact icons as appropriate.

--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ CONTACT
   background-image: url('../img/phone.png');
 }
 
-.contact-info li.mail a {
+.contact-info li.email a {
   background-image: url('../img/mail.png');
 }
 
