update about and contact information, add twitter contact css

--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,10 @@ CONTACT
   background-image: url('../img/mail.png');
 }
 
+.contact-info li.twitter a {
+  background-image: url('../img/twitter.png');
+}
+
 /*******************
 COLORS
 *******************/
